update to onnx runtime 1.5.2 add sample onnx runtime in node add sample onnx runtime in python

--- a/notebooks/ExportToOnnx.ipynb
+++ b/notebooks/ExportToOnnx.ipynb
@@ -18,66 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.ML.OnnxConverter version 0.16.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.ML.OnnxRuntime version 1.1.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.Data.Analysis version 0.3.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.ML.OnnxTransformer version 1.4.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package Microsoft.ML version 1.4.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#r \"nuget:Microsoft.ML,1.4.0\"\n",
-    "#r \"nuget:Microsoft.Data.Analysis,0.3.0\"\n",
-    "#r \"nuget:Microsoft.ML.OnnxTransformer,1.4.0\"\n",
-    "#r \"nuget:Microsoft.ML.OnnxConverter,0.16.0\"\n",
-    "#r \"nuget:Microsoft.ML.OnnxRuntime,1.1.0\""
+    "#r \"nuget:Microsoft.ML,1.5.2\"\n",
+    "#r \"nuget:Microsoft.Data.Analysis,0.4.0\"\n",
+    "#r \"nuget:Microsoft.ML.OnnxTransformer,1.5.2\"\n",
+    "#r \"nuget:Microsoft.ML.OnnxConverter,0.17.2\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "using Microsoft.AspNetCore.Html;\n",
-    "Formatter<DataFrame>.Register((df, writer) =>\n",
+    "Formatter.Register<DataFrame>((df, writer) =>\n",
     "{\n",
     "    var headers = new List<IHtmlContent>();\n",
     "    headers.Add(th(i(\"index\")));\n",
@@ -131,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><th><i>index</i></th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td>0</td><td>1.1</td><td>39343</td></tr><tr><td>1</td><td>1.3</td><td>46205</td></tr><tr><td>2</td><td>1.5</td><td>37731</td></tr><tr><td>3</td><td>2</td><td>43525</td></tr><tr><td>4</td><td>2.2</td><td>39891</td></tr><tr><td>5</td><td>2.9</td><td>56642</td></tr><tr><td>6</td><td>3</td><td>60150</td></tr><tr><td>7</td><td>3.2</td><td>54445</td></tr><tr><td>8</td><td>3.2</td><td>64445</td></tr><tr><td>9</td><td>3.7</td><td>57189</td></tr><tr><td>10</td><td>3.9</td><td>63218</td></tr><tr><td>11</td><td>4</td><td>55794</td></tr><tr><td>12</td><td>4</td><td>56957</td></tr><tr><td>13</td><td>4.1</td><td>57081</td></tr><tr><td>14</td><td>4.5</td><td>61111</td></tr><tr><td>15</td><td>4.9</td><td>67938</td></tr><tr><td>16</td><td>5.1</td><td>66029</td></tr><tr><td>17</td><td>5.3</td><td>83088</td></tr><tr><td>18</td><td>5.9</td><td>81363</td></tr><tr><td>19</td><td>6</td><td>93940</td></tr></tbody></table>"
+       "<table><thead><th><i>index</i></th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td><div class=\"dni-plaintext\">0</div></td><td><div class=\"dni-plaintext\">1.1</div></td><td><div class=\"dni-plaintext\">39343</div></td></tr><tr><td><div class=\"dni-plaintext\">1</div></td><td><div class=\"dni-plaintext\">1.3</div></td><td><div class=\"dni-plaintext\">46205</div></td></tr><tr><td><div class=\"dni-plaintext\">2</div></td><td><div class=\"dni-plaintext\">1.5</div></td><td><div class=\"dni-plaintext\">37731</div></td></tr><tr><td><div class=\"dni-plaintext\">3</div></td><td><div class=\"dni-plaintext\">2</div></td><td><div class=\"dni-plaintext\">43525</div></td></tr><tr><td><div class=\"dni-plaintext\">4</div></td><td><div class=\"dni-plaintext\">2.2</div></td><td><div class=\"dni-plaintext\">39891</div></td></tr><tr><td><div class=\"dni-plaintext\">5</div></td><td><div class=\"dni-plaintext\">2.9</div></td><td><div class=\"dni-plaintext\">56642</div></td></tr><tr><td><div class=\"dni-plaintext\">6</div></td><td><div class=\"dni-plaintext\">3</div></td><td><div class=\"dni-plaintext\">60150</div></td></tr><tr><td><div class=\"dni-plaintext\">7</div></td><td><div class=\"dni-plaintext\">3.2</div></td><td><div class=\"dni-plaintext\">54445</div></td></tr><tr><td><div class=\"dni-plaintext\">8</div></td><td><div class=\"dni-plaintext\">3.2</div></td><td><div class=\"dni-plaintext\">64445</div></td></tr><tr><td><div class=\"dni-plaintext\">9</div></td><td><div class=\"dni-plaintext\">3.7</div></td><td><div class=\"dni-plaintext\">57189</div></td></tr><tr><td><div class=\"dni-plaintext\">10</div></td><td><div class=\"dni-plaintext\">3.9</div></td><td><div class=\"dni-plaintext\">63218</div></td></tr><tr><td><div class=\"dni-plaintext\">11</div></td><td><div class=\"dni-plaintext\">4</div></td><td><div class=\"dni-plaintext\">55794</div></td></tr><tr><td><div class=\"dni-plaintext\">12</div></td><td><div class=\"dni-plaintext\">4</div></td><td><div class=\"dni-plaintext\">56957</div></td></tr><tr><td><div class=\"dni-plaintext\">13</div></td><td><div class=\"dni-plaintext\">4.1</div></td><td><div class=\"dni-plaintext\">57081</div></td></tr><tr><td><div class=\"dni-plaintext\">14</div></td><td><div class=\"dni-plaintext\">4.5</div></td><td><div class=\"dni-plaintext\">61111</div></td></tr><tr><td><div class=\"dni-plaintext\">15</div></td><td><div class=\"dni-plaintext\">4.9</div></td><td><div class=\"dni-plaintext\">67938</div></td></tr><tr><td><div class=\"dni-plaintext\">16</div></td><td><div class=\"dni-plaintext\">5.1</div></td><td><div class=\"dni-plaintext\">66029</div></td></tr><tr><td><div class=\"dni-plaintext\">17</div></td><td><div class=\"dni-plaintext\">5.3</div></td><td><div class=\"dni-plaintext\">83088</div></td></tr><tr><td><div class=\"dni-plaintext\">18</div></td><td><div class=\"dni-plaintext\">5.9</div></td><td><div class=\"dni-plaintext\">81363</div></td></tr><tr><td><div class=\"dni-plaintext\">19</div></td><td><div class=\"dni-plaintext\">6</div></td><td><div class=\"dni-plaintext\">93940</div></td></tr></tbody></table>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><th><i>index</i></th><th>Description</th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td>0</td><td>Length (excluding null values)</td><td>30</td><td>30</td></tr><tr><td>1</td><td>Max</td><td>10.5</td><td>122391</td></tr><tr><td>2</td><td>Min</td><td>1.1</td><td>37731</td></tr><tr><td>3</td><td>Mean</td><td>5.3133335</td><td>76003</td></tr></tbody></table>"
+       "<table><thead><th><i>index</i></th><th>Description</th><th>yearsExperience</th><th>salary</th></thead><tbody><tr><td><div class=\"dni-plaintext\">0</div></td><td>Length (excluding null values)</td><td><div class=\"dni-plaintext\">30</div></td><td><div class=\"dni-plaintext\">30</div></td></tr><tr><td><div class=\"dni-plaintext\">1</div></td><td>Max</td><td><div class=\"dni-plaintext\">10.5</div></td><td><div class=\"dni-plaintext\">122391</div></td></tr><tr><td><div class=\"dni-plaintext\">2</div></td><td>Min</td><td><div class=\"dni-plaintext\">1.1</div></td><td><div class=\"dni-plaintext\">37731</div></td></tr><tr><td><div class=\"dni-plaintext\">3</div></td><td>Mean</td><td><div class=\"dni-plaintext\">5.3133335</div></td><td><div class=\"dni-plaintext\">76003</div></td></tr></tbody></table>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "27"
+       "<div class=\"dni-plaintext\">27</div>"
       ]
      },
      "metadata": {},
@@ -195,7 +148,7 @@
     {
      "data": {
       "text/html": [
-       "3"
+       "<div class=\"dni-plaintext\">3</div>"
       ]
      },
      "metadata": {},
@@ -238,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,10 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pragma warning disable CS1701\n",
     "var pipeline = context.Transforms.Concatenate(\"Features\", \"yearsExperience\")\n",
     "                .Append(context.Regression.Trainers.Sdca(labelColumnName: \"salary\"));"
    ]
@@ -280,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -317,11 +271,11 @@
       "*************************************************\n",
       "*       Metrics for regression model      \n",
       "*------------------------------------------------\n",
-      "*       LossFn:        69766371.67\n",
-      "*       R2 Score:      0.72\n",
-      "*       Absolute loss: 7715.65\n",
-      "*       Squared loss:  69766371.87\n",
-      "*       RMS loss:      8352.63\n",
+      "*       LossFn:        11076673.47\n",
+      "*       R2 Score:      0.97\n",
+      "*       Absolute loss: 2403.81\n",
+      "*       Squared loss:  11076673.56\n",
+      "*       RMS loss:      3328.16\n",
       "*************************************************\n"
      ]
     }
@@ -340,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,102 +326,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run Inferencing\n",
-    "using nuget:Microsoft.ML.OnnxRuntime,1.1.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using Microsoft.ML.OnnxRuntime;\n",
-    "using Microsoft.ML.OnnxRuntime.Tensors;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "private static NamedOnnxValue GetNamedOnnxValue<T>(IReadOnlyDictionary<string, NodeMetadata> inputMeta, string column, T value)\n",
-    "{\n",
-    "    T[] inputDataInt = new T[] { value };\n",
-    "    var tensor = new DenseTensor<T>(inputDataInt, inputMeta[column].Dimensions);\n",
-    "    var namedOnnxValue = NamedOnnxValue.CreateFromTensor<T>(column, tensor);\n",
-    "    return namedOnnxValue;\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load ONNX Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var session = new InferenceSession(MODEL_NAME);\n",
-    "\n",
-    "var inputMeta = session.InputMetadata;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Fill in Input Data\n",
     "\n",
     "![ONNX Netron Image](onnx-netron.PNG)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var container = new List<NamedOnnxValue>();\n",
-    "container.Add(GetNamedOnnxValue<float>(inputMeta, \"yearsExperience\", 1.1f));\n",
-    "container.Add(GetNamedOnnxValue<float>(inputMeta, \"salary\", 0f));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run Inferencing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**********************************************************************\n",
-      "Predicted salary: 36480.3, actual salary: 39343.0\n",
-      "**********************************************************************\n"
-     ]
-    }
-   ],
-   "source": [
-    "var result = session.Run(container);\n",
-    "var output = result.First(x => x.Name == \"Score0\").AsTensor<float>().Max();\n",
-    "\n",
-    "Console.WriteLine($\"**********************************************************************\");\n",
-    "Console.WriteLine($\"Predicted salary: {output:0.####}, actual salary: 39343.0\");\n",
-    "Console.WriteLine($\"**********************************************************************\");\n"
    ]
   },
   {
